<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/change_password_background"
    tools:context=".ChangePassword">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/application_name" />

    <EditText
        android:id="@+id/userEmailInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:padding="12dp"
        android:background="@drawable/edittext_bg"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/emailInput"
        android:autofillHints="emailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <EditText
        android:id="@+id/userNewPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:textColorHint="@color/black"
        android:autofillHints="password"
        android:hint="@string/change_password_new_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmailInput" />

    <Button
        android:id="@+id/SubmitNewPassword"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/bungee"
        android:textColor="@color/yellow"
        android:text="@string/change_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNewPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>